--- a/app/views/full-page-examples/applicant-details/index.njk
+++ b/app/views/full-page-examples/applicant-details/index.njk
@@ -8,7 +8,7 @@ notes: >-
   known accessibility issues.
 ---
 
-{% extends "legacy.njk" %}
+{% extends "full-page-example-legacy.njk" %}
 
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "date-input/macro.njk" import govukDateInput %}
