--- a/app/views/full-page-examples/confirm-delete/index.njk
+++ b/app/views/full-page-examples/confirm-delete/index.njk
@@ -1,4 +1,4 @@
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "warning-text/macro.njk" import govukWarningText %}
 {% from "button/macro.njk" import govukButton %}
