--- a/app/views/full-page-examples/how-do-you-want-to-sign-in/index.njk
+++ b/app/views/full-page-examples/how-do-you-want-to-sign-in/index.njk
@@ -10,7 +10,7 @@ scenario: >-
 notes: Based on https://www.gov.uk/log-in-file-self-assessment-tax-return/sign-in/prove-identity
 ---
 
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
