--- a/app/views/full-page-examples/renew-driving-licence/index.njk
+++ b/app/views/full-page-examples/renew-driving-licence/index.njk
@@ -8,7 +8,7 @@ notes: >-
 
 {# This example is based on the "Renew driving licence"
 example: https://www.gov.uk/renew-driving-licence #}
-{% extends "legacy.njk" %}
+{% extends "full-page-example-legacy.njk" %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "inset-text/macro.njk" import govukInsetText %}
