--- a/app/views/full-page-examples/search/index.njk
+++ b/app/views/full-page-examples/search/index.njk
@@ -18,7 +18,7 @@ notes: >-
   This example merges features seen on GOV.UK news and communication finders and search pages.
 ---
 
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "input/macro.njk" import govukInput %}
