--- a/app/views/full-page-examples/service-manual-topic/index.njk
+++ b/app/views/full-page-examples/service-manual-topic/index.njk
@@ -8,7 +8,7 @@ notes: The links within each section are not functional.
 ---
 
 {# This example is based of the live "Service Manual - Technology" page: https://www.gov.uk/service-manual/technology #}
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "accordion/macro.njk" import govukAccordion %}
