--- a/app/views/full-page-examples/start-page/index.njk
+++ b/app/views/full-page-examples/start-page/index.njk
@@ -11,7 +11,7 @@ notes: The buttons and links on this page are not functional.
 ---
 
 {# This example is based of the live "Apply online for a UK passport" start page: https://www.gov.uk/apply-renew-passport #}
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "button/macro.njk" import govukButton %}
