--- a/app/views/full-page-examples/what-is-your-postcode/index.njk
+++ b/app/views/full-page-examples/what-is-your-postcode/index.njk
@@ -9,7 +9,7 @@ scenario: >-
 ---
 
 {# This example is based of the  "What is your home postcode?" example: https://design-system.service.gov.uk/patterns/question-pages/postcode/index.html #}
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "button/macro.njk" import govukButton %}
