--- a/app/views/layouts/layout.njk
+++ b/app/views/layouts/layout.njk
@@ -5,9 +5,7 @@
 {% block pageTitle %}GOV.UK Frontend{% endblock %}
 
 {# Turn the header and footer off #}
-{% block header %}
-  {% include "../partials/banner.njk" %}
-{% endblock %}
+{% block header %}{% endblock %}
 {% block footer %}{% endblock %}
 
 {% block bodyEnd %}
