--- a/app/views/full-page-examples/cookie-banner-essential-cookies/index.njk
+++ b/app/views/full-page-examples/cookie-banner-essential-cookies/index.njk
@@ -13,7 +13,7 @@ notes: >-
 ---
 
 {# This example is based of the live "Apply online for a UK passport" start page: https://www.gov.uk/apply-renew-passport #}
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "button/macro.njk" import govukButton %}
