--- a/app/views/full-page-examples/update-your-account-details/index.njk
+++ b/app/views/full-page-examples/update-your-account-details/index.njk
@@ -8,7 +8,7 @@ scenario: >-
   1. Intentionally avoid answering the questions before continuing to the next page.
 ---
 
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "error-summary/macro.njk" import govukErrorSummary %}
