--- a/app/views/full-page-examples/what-was-the-last-country-you-visited/confirm.njk
+++ b/app/views/full-page-examples/what-was-the-last-country-you-visited/confirm.njk
@@ -1,5 +1,5 @@
 {# This example is not based on a live example #}
-{% extends "_generic.njk" %}
+{% extends "full-page-example.njk" %}
 
 {% from "panel/macro.njk" import govukPanel %}
 
