--- a/app/views/partials/exampleBanner.njk
+++ b/app/views/partials/exampleBanner.njk
@@ -2,9 +2,9 @@
 <div class="app-banner app-banner--warning" data-module="app-banner">
   <div class="govuk-width-container">
     <p class="govuk-body">
-      This is an internal development app.
+      This is not a real service, and is used for testing purposes only.
       <br>
-      To learn how to use the GOV.UK Design System in your project, see <a class="govuk-link govuk-link--inverse" href="https://design-system.service.gov.uk/get-started/">Get started</a>.
+      See the <a class="govuk-link govuk-link--inverse" href="https://design-system.service.gov.uk/">GOV.UK Design System</a> for recommended guidance.
     </p>
     <form method="post" action="/hide-banner">
       <button class="govuk-button govuk-button--secondary govuk-!-margin-bottom-0">Hide this banner</button>
