Adjust and remove examples
Adjust text in default examples to more realistically demonstrate text alignment. Update test to reflect new example content.

Remove accordion <sup> examples. These examples were added to test a different combination of HTML elements in the
accordion component. However, the <sup> element specifically pushes text in the
accordion out of line and therefore requires additional styling if it's going to be
used (vertical-align: top). We also don't think it's likely that a user would want
to use <sup> inside the summary line.This commit removes the <sup> from the accordion examples. The existing examples still
test the accordion when passing in HTML content, so that is still covered.

Add an example of an accordion using the summary line that reflects the upcoming guidance update which advises keeping the summary line text short.

--- a/app/views/full-page-examples/campaign-page/index.njk
+++ b/app/views/full-page-examples/campaign-page/index.njk
@@ -109,7 +109,7 @@ notes: >-
               },
               expanded: true,
               content: {
-                html: "<p class='govuk-body'>This is the content for Staying for the<sup>1</sup> web.</p>"
+                html: "<p class='govuk-body'>This is the content for Staying for the web.</p>"
               }
             },
             {
@@ -165,7 +165,7 @@ notes: >-
                 text: "Providing assisted digital support"
               },
               summary: {
-                html: "<span class='govuk-!-font-weight-regular'>Helping people who don't have the skills or access to use a service.<sup>1</sup></span>"
+                html: "<span class='govuk-!-font-weight-regular'>Helping people who don't have the skills or access to use a service.</span>"
               },
               content: {
                 html: "<ul class='govuk-list'><li><a class='govuk-link' href='#'>Making your service accessible: an introduction</a></li><li><a class='govuk-link' href='#'>Understanding WCAG 2.1</a></li><li><a class='govuk-link' href='#'>Getting an accessibility audit</a></li><li><a class='govuk-link' href='#'>Testing for accessibility</a></li><li><a class='govuk-link' href='#'>Publishing information about your service's accessibility</a></li></ul>"
@@ -193,6 +193,35 @@ notes: >-
           <h3 class="govuk-heading-s govuk-!-margin-bottom-1"><a class="govuk-link" href="#">Press conferences (YouTube)</a></h3>
           <h3 class="govuk-heading-s govuk-!-margin-bottom-1"><a class="govuk-link" href="#">Press conference statements</a></h3>
         </section>
+
+        {{ govukAccordion({
+          id: "accordion-summaries-short",
+          items: [
+            {
+              heading: {
+                text: "Accessibility requirements"
+              },
+              summary: {
+                text: "Assessments"
+              },
+              content: {
+                html: "<ul class='govuk-list'><li><a class='govuk-link' href='#'>Making your service accessible: an introduction</a></li><li><a class='govuk-link' href='#'>Understanding WCAG 2.1</a></li><li><a class='govuk-link' href='#'>Getting an accessibility audit</a></li><li><a class='govuk-link' href='#'>Testing for accessibility</a></li><li><a class='govuk-link' href='#'>Publishing information about your service's accessibility</a></li></ul>"
+              }
+            },
+            {
+              heading: {
+                text: "User support"
+              },
+              summary: {
+                text: "Estimating demand"
+              },
+              content: {
+                html: "<ul class='govuk-list'><li><a class='govuk-link' href='#'>Making your service accessible: an introduction</a></li><li><a class='govuk-link' href='#'>Understanding WCAG 2.1</a></li><li><a class='govuk-link' href='#'>Getting an accessibility audit</a></li><li><a class='govuk-link' href='#'>Testing for accessibility</a></li><li><a class='govuk-link' href='#'>Publishing information about your service's accessibility</a></li></ul>"
+              }
+            }
+          ]
+        }) }}
+
         <div class="app-updates">
           <h3 class="govuk-heading-s">Stay up to date with GOV.UK</h3>
           <p class="govuk-body"><a class="govuk-link" href="#">Sign up to get emails when we change any coronavirus information on the GOV.UK website</a></p>
