Change how focus state is set
The CSS adjustment removed in #132c12f had the favourable side effect of limiting the width of the focus state for the three text items (heading, summary, show/hide), stopping the focus state from expanding beyond the text to the full width of the component.

To limit the width of the focus state without the NVDA adjustment, this commit:
- adds focus containers in the markup inside the three items using JavaScript
- makes the focus containers inline items
- moves the focus styles to those classes; the inline style sets the width of the focus state to the width of the text
- renames `.govuk-accordion__section-heading-focus-wrapper` to `.govuk-accordion__section-heading-text` since the class no longer has the focus styles

Change the text containers to set bottom margin instead of top margin as this:
- resolves an issue with the summary line margin: since the summary line container is now a block level one, it renders the `.govuk-body` bottom margin; moving the margin to the bottom of the container makes the container margin collapse with the `.govuk-body` bottom margin
- is more consistent with how rest of GOV.UK Frontend sets margins

As the last text container inside the butotn now has a bottom margin, we also don’t need set the bottom margin on the button anymore.

Also remove a now redundant rule that would add an underline to improve affordance for text inside pseudo elements since we no longer use pseudo elements for text content inside the button.

--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -32,7 +32,7 @@
     padding-top: govuk-spacing(3);
   }
 
-  .govuk-accordion__section-heading-focus-wrapper {
+  .govuk-accordion__section-heading-text {
     @include govuk-font($size: 24, $weight: bold);
   }
 
@@ -196,7 +196,7 @@
     .govuk-accordion__section-button {
       width: 100%;
 
-      padding: govuk-spacing(2) 0 govuk-spacing(3) 0;
+      padding: govuk-spacing(2) 0 0 0;
 
       border: 0;
 
@@ -246,9 +246,9 @@
         // styling is being applied to inner text elements that receive focus
         outline: 0;
 
-        .govuk-accordion__section-heading-focus-wrapper,
-        .govuk-accordion__section-summary,
-        .govuk-accordion__section-toggle {
+        .govuk-accordion__section-heading-text-focus,
+        .govuk-accordion__section-summary-focus,
+        .govuk-accordion__section-toggle-focus {
           @include govuk-focused-text;
         }
 
@@ -279,7 +279,7 @@
 
     // As Chevron icon is vertically aligned it overlaps with the focus state bottom border
     // Styling adds some spacing
-    .govuk-accordion__section-button:focus .govuk-accordion__section-toggle {
+    .govuk-accordion__section-button:focus .govuk-accordion__section-toggle-focus {
       padding-bottom: 3px;
 
       @include govuk-media-query ($from: desktop) {
@@ -288,10 +288,15 @@
     }
 
     .govuk-accordion__section-toggle,
-    .govuk-accordion__section-heading-focus-wrapper,
+    .govuk-accordion__section-heading-text,
     .govuk-accordion__section-summary {
       display: block;
-      margin-top: 13px;
+      margin-bottom: 13px;
+
+      .govuk-accordion__section-heading-text-focus,
+      .govuk-accordion__section-summary-focus,
+      .govuk-accordion__section-toggle-focus {
+        display: inline;
       }
     }
 
@@ -321,19 +326,13 @@
         .govuk-accordion-nav__chevron {
           background-color: transparent;
         }
-
-        .govuk-accordion__show-all-text,
-        .govuk-accordion__section-toggle {
-          text-decoration: underline;
-          text-decoration-thickness: 3px;
-        }
       }
 
       .govuk-accordion__show-all:focus,
       .govuk-accordion__section-button:focus {
-        .govuk-accordion__section-heading-focus-wrapper,
-        .govuk-accordion__section-summary,
-        .govuk-accordion__section-toggle,
+        .govuk-accordion__section-heading-text-focus,
+        .govuk-accordion__section-summary-focus,
+        .govuk-accordion__section-toggle-focus,
         .govuk-accordion-nav__chevron {
           background: transparent;
           background-color: transparent;
